<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FBFFE2"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="154dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="157dp"
        android:layout_height="62dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/trade_winds"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/rednama"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:background="@drawable/border2"
        android:ems="10"
        android:hint="@string/anama"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rednama"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/redemail"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:background="@drawable/border2"
        android:ems="10"
        android:hint="@string/aemail"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redemail"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:text="Re - Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redpass"
        app:layout_constraintVertical_bias="0.212" />

    <EditText
        android:id="@+id/redpass"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/apass"
        android:padding="10dp"
        android:background="@drawable/border2"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/redrepass"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:background="@drawable/border2"
        android:ems="10"
        android:hint="@string/arepass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/rbtn"
        android:layout_width="106dp"
        android:layout_height="39dp"
        android:backgroundTint="#FFBBBB"
        android:text="SIGN UP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redrepass"
        app:layout_constraintVertical_bias="0.257"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>